force-app/main/default/objects/SDO_Service_Bot_Message__c.object
<CustomObject>
    <description>What: Used by the Jokes part of the Sunny Bot
Who: Service Cloud Team.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message_1__c</fullName>
        <label>Message 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_2__c</fullName>
        <label>Message 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Joke</fullName>
                </value>
                <value>
                    <fullName>Gratitude</fullName>
                </value>
                <value>
                    <fullName>Greetings</fullName>
                </value>
                <value>
                    <fullName>Chit Chat</fullName>
                </value>
                <value>
                    <fullName>Confused</fullName>
                </value>
                <value>
                    <fullName>End Chat</fullName>
                </value>
                <value>
                    <fullName>Anything Else</fullName>
                </value>
                <value>
                    <fullName>Profanity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bot Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Anything_Else</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Anything Else</value>
        </filters>
        <label>Anything Else</label>
    </listViews>
    <listViews>
        <fullName>Chit_Chat</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Chit Chat</value>
        </filters>
        <label>Chit Chat</label>
    </listViews>
    <listViews>
        <fullName>Confused</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Confused</value>
        </filters>
        <label>Confused</label>
    </listViews>
    <listViews>
        <fullName>End_Chat</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>End Chat</value>
        </filters>
        <label>End Chat</label>
    </listViews>
    <listViews>
        <fullName>Gratitude</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Gratitude</value>
        </filters>
        <label>Gratitude</label>
    </listViews>
    <listViews>
        <fullName>Greetings</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Greetings</value>
        </filters>
        <label>Greetings</label>
    </listViews>
    <listViews>
        <fullName>Jokes</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Joke</value>
        </filters>
        <label>Jokes</label>
    </listViews>
    <listViews>
        <fullName>Profanity</fullName>
        <columns>NAME</columns>
        <columns>Message_1__c</columns>
        <columns>Message_2__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Profanity</value>
        </filters>
        <label>Profanity</label>
    </listViews>
    <nameField>
        <label>Bot Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>